# artaleKey

./: .gitignore  APP_FIX_SOLUTION.md  ArtaleKey.spec  DMG_GUIDE.md  MACOS_BUILD_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  UI_FIX_README.md  UI_IMPROVEMENT_COMPARISON.md  apply_ui_fixes.py  build_macos_app.py  pyproject.toml  requirements-build.txt  requirements.txt  run_artalekey.py  run_ui_test.py  simple_native_ui_test.py  simple_ui_summary.py  simple_ui_test.py  test_new_ui.py  test_window_detection.py  启动说明.md
artalekey/: __main__.py
artalekey/core/: config.py  hotkey_manager.py  logger.py  window_detector.py
artalekey/ui/: components.py  main_window.py  simple_main_window.py  simple_styles.py  simple_target_selector.py  styles.py  target_app_selector.py
assets/: icon_guide.md
docs/: macOS打包指南.md  项目结构整理说明.md
scripts/: ui_fix_summary.py
tests/: run_ui_test.py  simple_native_ui_test.py  simple_ui_test.py  test_new_ui.py  test_performance.py
