[project]
name = "artalekey"
version = "0.1.0"
description = "A modern hotkey management application"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "PyQt6>=6.6.1",
    "pynput>=1.7.6",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100 